tests/macros/tests/ui/err/name-is-not-string.stderr
error: expected string literal
 --> tests/ui/err/name-is-not-string.rs:3:16
  |
3 | #[trace(name = true)]
  |                ^^^^
