tests/macros/tests/ui/err/name-is-not-string.rs
use fastrace::trace;

#[trace(name = true)]
fn f() {}

fn main() {}
